<resources>
    <string name="app_name">Card</string>
    <string name="stream">Android Developer</string>
    <string name="name">Amaresh Tiwari</string>
    <string name="using">Develop Android App for Mobile </string>
    <string name="content">Currently Working on Krishrivalah Project</string>
    <string name="info">C language</string>
    <string name="info2">Core java</string>
    <string name="email">amareshtiwari567@gmail.com</string>

</resources>