<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <ImageView
      android:id="@+id/background"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:background="@drawable/background"
      android:scaleType="centerCrop" />
  <ImageView
      android:id="@+id/image"
      android:src="@drawable/image"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:layout_marginTop="30dp"/>



    <TextView
        android:text="@string/email"
        android:layout_marginStart="130dp"
        android:layout_marginTop="65dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/name"
        android:layout_marginStart="130dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        android:textSize="27dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

  <ImageView
      android:id="@+id/bullets"
      android:layout_width="10dp"
      android:layout_height="10dp"
      android:layout_marginStart="7dp"
      android:layout_marginTop="258dp"
      android:src="@drawable/ic_launcher_background" />


    <TextView
        android:text="@string/stream"
        android:layout_marginStart="130dp"
        android:layout_marginTop="150dp"
        android:textColor="@color/black"
        android:textSize="27dp"
        android:textStyle="bold"
        android:scaleX="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/using"
        android:layout_marginTop="250dp"
        android:layout_marginStart="30dp"
        android:textSize="20dp"
        android:textStyle="italic"
        android:textColor="#F50057"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


  <ImageView
      android:id="@+id/bullets2"
      android:layout_width="10dp"
      android:layout_height="10dp"
      android:layout_marginStart="7dp"
      android:layout_marginTop="310dp"
      android:src="@drawable/ic_launcher_background" />

    <TextView
        android:text="@string/content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="30dp"
        android:textColor="#E040FB"
        android:textSize="20dp"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <ImageView
        android:id="@+id/bullets3"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="375dp"
        android:layout_marginStart="7dp"
        android:layout_width="10dp"
        android:layout_height="10dp"/>


    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_marginStart="28dp"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="355dp"
        card_view:cardCornerRadius="15dp">

        <TextView
            android:text="@string/info"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/pink_50"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/bullets4"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="470dp"
        android:layout_marginStart="7dp"
        android:layout_width="10dp"
        android:layout_height="10dp"/>


    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_marginStart="28dp"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="450dp"
        card_view:cardCornerRadius="16dp">

        <TextView
            android:text="@string/info2"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/pink_50"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/text"
        android:text="text"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="550dp"
        android:layout_marginStart="150dp"
        android:layout_width="100dp"
        android:layout_height="80dp"/>



</RelativeLayout>